--- a/Demo/DemoApp/ClientApp/src/styles.scss
+++ b/Demo/DemoApp/ClientApp/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Bootstrap Icons - fonts are copied via angular.json assets */
+@import 'bootstrap-icons/font/bootstrap-icons.css';
