--- a/Demo/DemoApp/ClientApp/src/app/pages/po-create/po-create.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/pages/po-create/po-create.component.html
@@ -4,51 +4,58 @@
 
     <div class="card">
       <div class="card-body">
-        <form (ngSubmit)="onSave()">
+        <bs-form (submit)="onSave()">
           @for (attr of getEditableAttributes(); track attr.id) {
-            <div class="mb-3">
-              <label [for]="attr.name" class="form-label">
-                {{ attr.label || attr.name }}
-                @if (attr.isRequired) {
-                  <span class="text-danger">*</span>
-                }
-              </label>
-              @if (attr.dataType === 'boolean') {
-                <div class="form-check">
+            @if (attr.dataType === 'boolean') {
+              <div class="form-check mb-3">
+                <input
+                  type="checkbox"
+                  class="form-check-input"
+                  [id]="attr.name"
+                  [(ngModel)]="formData[attr.name]"
+                  [name]="attr.name">
+                <label class="form-check-label" [for]="attr.name">
+                  {{ attr.label || attr.name }}
+                  @if (attr.isRequired) {
+                    <span class="text-danger">*</span>
+                  }
+                </label>
+              </div>
+            } @else {
+              <bs-floating-label class="d-block mb-3">
+                @if (attr.dataType === 'reference') {
                   <input
-                    type="checkbox"
-                    class="form-check-input"
+                    type="text"
                     [id]="attr.name"
                     [(ngModel)]="formData[attr.name]"
-                    [name]="attr.name">
-                </div>
-              } @else if (attr.dataType === 'reference') {
-                <input
-                  type="text"
-                  class="form-control"
-                  [id]="attr.name"
-                  [(ngModel)]="formData[attr.name]"
-                  [name]="attr.name"
-                  [required]="attr.isRequired"
-                  placeholder="Enter reference ID">
-              } @else {
-                <input
-                  [type]="getInputType(attr.dataType)"
-                  class="form-control"
-                  [id]="attr.name"
-                  [(ngModel)]="formData[attr.name]"
-                  [name]="attr.name"
-                  [required]="attr.isRequired"
-                  [step]="attr.dataType === 'decimal' ? '0.01' : '1'">
-              }
-            </div>
+                    [name]="attr.name"
+                    [required]="attr.isRequired"
+                    placeholder=" ">
+                } @else {
+                  <input
+                    [type]="getInputType(attr.dataType)"
+                    [id]="attr.name"
+                    [(ngModel)]="formData[attr.name]"
+                    [name]="attr.name"
+                    [required]="attr.isRequired"
+                    [step]="attr.dataType === 'decimal' ? '0.01' : '1'"
+                    placeholder=" ">
+                }
+                <label [for]="attr.name">
+                  {{ attr.label || attr.name }}
+                  @if (attr.isRequired) {
+                    <span class="text-danger">*</span>
+                  }
+                </label>
+              </bs-floating-label>
+            }
           }
 
-          <div class="d-flex justify-content-end gap-2">
-            <button type="button" class="btn btn-outline-secondary" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save</button>
+          <div class="d-flex justify-content-end gap-2 mt-4">
+            <button type="button" [color]="colors.secondary" (click)="onCancel()">Cancel</button>
+            <button type="submit" [color]="colors.primary">Save</button>
           </div>
-        </form>
+        </bs-form>
       </div>
     </div>
   } @else {
