--- a/Demo/DemoApp/ClientApp/src/app/pages/po-create/po-create.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/pages/po-create/po-create.component.html
@@ -2,60 +2,24 @@
   @if (entityType) {
     <h2 class="mb-4">Create {{ entityType.name }}</h2>
 
+    <!-- General validation errors -->
+    @for (error of getGeneralErrors(); track error.errorMessage) {
+      <bs-alert [type]="colors.danger" class="mb-3">
+        {{ error.errorMessage }}
+      </bs-alert>
+    }
+
     <div class="card">
       <div class="card-body">
-        <bs-form (submit)="onSave()">
-          <bs-grid>
-            @for (attr of getEditableAttributes(); track attr.id) {
-              <div bsRow class="mb-3">
-                <label [md]="4" bsColFormLabel [for]="attr.name">
-                  {{ attr.label || attr.name }}
-                  @if (attr.isRequired) {
-                    <span class="text-danger">*</span>
-                  }
-                </label>
-                <div [md]="8">
-                  @if (attr.dataType === 'boolean') {
-                    <div class="form-check pt-2">
-                      <input
-                        type="checkbox"
-                        class="form-check-input"
-                        [id]="attr.name"
-                        [(ngModel)]="formData[attr.name]"
-                        [name]="attr.name">
-                    </div>
-                  } @else if (attr.dataType === 'reference') {
-                    <bs-select
-                      [id]="attr.name"
-                      [(ngModel)]="formData[attr.name]"
-                      [name]="attr.name">
-                      <option [ngValue]="null">-- Select --</option>
-                      @for (option of getReferenceOptions(attr); track option.id) {
-                        <option [ngValue]="option.id">{{ option.breadcrumb || option.name }}</option>
-                      }
-                    </bs-select>
-                  } @else {
-                    <input
-                      [type]="getInputType(attr.dataType)"
-                      [id]="attr.name"
-                      [(ngModel)]="formData[attr.name]"
-                      [name]="attr.name"
-                      [required]="attr.isRequired"
-                      [step]="attr.dataType === 'decimal' ? '0.01' : '1'">
-                  }
-                </div>
-              </div>
-            }
-
-            <div bsRow class="mt-4">
-              <div [md]="4"></div>
-              <div [md]="8" class="d-flex justify-content-end gap-2">
-                <button type="button" [color]="colors.secondary" (click)="onCancel()">Cancel</button>
-                <button type="submit" [color]="colors.primary">Save</button>
-              </div>
-            </div>
-          </bs-grid>
-        </bs-form>
+        <app-po-form
+          [entityType]="entityType"
+          [(formData)]="formData"
+          [validationErrors]="validationErrors"
+          [showButtons]="true"
+          [isSaving]="isSaving"
+          (save)="onSave()"
+          (cancel)="onCancel()">
+        </app-po-form>
       </div>
     </div>
   } @else {
