--- a/Demo/DemoApp/ClientApp/src/app/pages/query-list/query-list.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/pages/query-list/query-list.component.html
@@ -7,7 +7,39 @@
   </div>
 
   @if (entityType) {
-    <bs-datatable [(settings)]="settings" (settingsChange)="loadItems()">
+    <!-- Search box -->
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <div class="input-group">
+          <span class="input-group-text">
+            <i class="bi bi-search"></i>
+          </span>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search..."
+            [(ngModel)]="searchTerm"
+            (ngModelChange)="onSearchChange()">
+          @if (searchTerm) {
+            <button
+              type="button"
+              class="btn btn-outline-secondary"
+              (click)="clearSearch()">
+              <i class="bi bi-x-lg"></i>
+            </button>
+          }
+        </div>
+      </div>
+      <div class="col-md-8 text-end">
+        @if (searchTerm && paginationData) {
+          <span class="text-muted">
+            {{ paginationData.count }} result{{ paginationData.count !== 1 ? 's' : '' }} found
+          </span>
+        }
+      </div>
+    </div>
+
+    <bs-datatable [(settings)]="settings" (settingsChange)="applyFilter()">
       @for (attr of getVisibleAttributes(); track attr.id) {
         <div *bsDatatableColumn="attr.name; sortable: true">
           {{ attr.label || attr.name }}
