--- a/Demo/DemoApp/ClientApp/src/app/pages/query-list/query-list.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/pages/query-list/query-list.component.html
@@ -33,7 +33,7 @@
       <div class="col-md-8 text-end">
         @if (searchTerm && paginationData) {
           <span class="text-muted">
-            {{ paginationData.count }} result{{ paginationData.count !== 1 ? 's' : '' }} found
+            {{ paginationData.totalRecords }} result{{ paginationData.totalRecords !== 1 ? 's' : '' }} found
           </span>
         }
       </div>
