--- a/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
@@ -34,21 +34,21 @@
               }
             </bs-select>
           } @else if (attr.dataType === 'embedded') {
-            <div class="input-group">
+            <bs-input-group>
               <input
                 type="text"
-                class="form-control"
                 [id]="attr.name"
                 [value]="getEmbeddedDisplayValue(attr)"
                 readonly
                 [class.is-invalid]="hasError(attr.name)">
               <button
                 type="button"
-                class="btn btn-outline-secondary"
+                bsInputGroupBtn
+                [color]="colors.secondary"
                 (click)="openEmbeddedEditor(attr)">
                 <i class="bi bi-pencil"></i> Edit
               </button>
-            </div>
+            </bs-input-group>
           } @else {
             <input
               [type]="getInputType(attr.dataType)"
@@ -88,13 +88,13 @@
 
 <!-- Modal for editing embedded objects -->
 <bs-modal [(isOpen)]="showEmbeddedModal" (isOpenChange)="!$event && closeEmbeddedModal()">
-  <ng-template #bsModalHeader>
-    <h5 class="modal-title">Edit {{ editingEmbeddedAttr?.label || editingEmbeddedAttr?.name }}</h5>
-  </ng-template>
+  <div *bsModal>
+    <div bsModalHeader>
+      <h5 class="modal-title">Edit {{ editingEmbeddedAttr?.label || editingEmbeddedAttr?.name }}</h5>
+    </div>
 
-  <ng-template #bsModalBody>
     @if (editingEmbeddedAttr) {
-      <bs-grid>
+      <bs-grid bsModalBody>
         @for (embAttr of getEmbeddedAttributes(editingEmbeddedAttr); track embAttr.id) {
           <div bsRow class="mb-3">
             <label [md]="4" bsColFormLabel [for]="'emb_' + embAttr.name">
@@ -127,11 +127,11 @@
         }
       </bs-grid>
     }
-  </ng-template>
 
-  <ng-template #bsModalFooter>
-    <button type="button" [color]="colors.secondary" (click)="closeEmbeddedModal()">Cancel</button>
-    <button type="button" [color]="colors.primary" (click)="saveEmbeddedObject()">Save</button>
-  </ng-template>
+    <div bsModalFooter>
+      <button type="button" [color]="colors.secondary" (click)="closeEmbeddedModal()">Cancel</button>
+      <button type="button" [color]="colors.primary" (click)="saveEmbeddedObject()">Save</button>
+    </div>
+  </div>
 </bs-modal>
 </bs-form>
