--- a/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
@@ -22,17 +22,21 @@
                 (ngModelChange)="onFieldChange()">
             </div>
           } @else if (attr.dataType === 'Reference') {
-            <bs-select
-              [id]="attr.name"
-              [(ngModel)]="formData[attr.name]"
-              [name]="attr.name"
-              [class.is-invalid]="hasError(attr.name)"
-              (ngModelChange)="onFieldChange()">
-              <option [ngValue]="null">-- Select --</option>
-              @for (option of getReferenceOptions(attr); track option.id) {
-                <option [ngValue]="option.id">{{ option.breadcrumb || option.name }}</option>
-              }
-            </bs-select>
+            <bs-input-group>
+              <input
+                type="text"
+                [id]="attr.name"
+                [value]="getReferenceDisplayValue(attr)"
+                readonly
+                [class.is-invalid]="hasError(attr.name)">
+              <button
+                type="button"
+                bsInputGroupBtn
+                [color]="colors.secondary"
+                (click)="openReferenceSelector(attr)">
+                ...
+              </button>
+            </bs-input-group>
           } @else if (attr.dataType === 'AsDetail') {
             <bs-input-group>
               <input
@@ -46,7 +50,7 @@
                 bsInputGroupBtn
                 [color]="colors.secondary"
                 (click)="openAsDetailEditor(attr)">
-                <i class="bi bi-pencil"></i> Edit
+                <i class="bi bi-pencil"></i>
               </button>
             </bs-input-group>
           } @else {
@@ -131,6 +135,75 @@
     <div bsModalFooter>
       <button type="button" [color]="colors.secondary" (click)="closeAsDetailModal()">Cancel</button>
       <button type="button" [color]="colors.primary" (click)="saveAsDetailObject()">Save</button>
+    </div>
+  </div>
+</bs-modal>
+
+<!-- Modal for selecting Reference items -->
+<bs-modal [(isOpen)]="showReferenceModal" (isOpenChange)="!$event && closeReferenceModal()">
+  <div *bsModal class="reference-modal">
+    <div bsModalHeader>
+      <h5 class="modal-title">Select {{ editingReferenceAttr?.label || editingReferenceAttr?.name }}</h5>
+    </div>
+
+    <div bsModalBody>
+      @if (referenceModalEntityType) {
+        <!-- Search box -->
+        <div class="row mb-3">
+          <div class="col-md-6">
+            <div class="input-group">
+              <span class="input-group-text">
+                <i class="bi bi-search"></i>
+              </span>
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search..."
+                [(ngModel)]="referenceSearchTerm"
+                (ngModelChange)="onReferenceSearchChange()">
+              @if (referenceSearchTerm) {
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary"
+                  (click)="clearReferenceSearch()">
+                  <i class="bi bi-x-lg"></i>
+                </button>
+              }
+            </div>
+          </div>
+          <div class="col-md-6 text-end">
+            @if (referenceSearchTerm && referenceModalPagination) {
+              <span class="text-muted">
+                {{ referenceModalPagination.totalRecords }} result{{ referenceModalPagination.totalRecords !== 1 ? 's' : '' }} found
+              </span>
+            }
+          </div>
+        </div>
+
+        <bs-datatable [(settings)]="referenceModalSettings" (settingsChange)="applyReferenceFilter()">
+          @for (attr of getReferenceVisibleAttributes(); track attr.id) {
+            <div *bsDatatableColumn="attr.name; sortable: true">
+              {{ attr.label || attr.name }}
+            </div>
+          }
+
+          <tr *bsRowTemplate="let item of referenceModalPagination" (click)="selectReferenceItem(item)" style="cursor: pointer;">
+            @for (attr of getReferenceVisibleAttributes(); track attr.id) {
+              <td>{{ getReferenceAttributeValue(item, attr.name) }}</td>
+            }
+          </tr>
+        </bs-datatable>
+      } @else {
+        <div class="text-center p-3">
+          <div class="spinner-border spinner-border-sm" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      }
+    </div>
+
+    <div bsModalFooter>
+      <button type="button" [color]="colors.secondary" (click)="closeReferenceModal()">Cancel</button>
     </div>
   </div>
 </bs-modal>
