--- a/Demo/DemoApp/ClientApp/src/app/shell/shell.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/shell/shell.component.html
@@ -13,7 +13,7 @@
       <bs-accordion-tab>
         <bs-accordion-tab-header>
           <span class="triangle me-2"></span>
-          <i class="bi" [ngClass]="group.icon || 'bi-folder'"></i>
+          <app-icon [name]="getIconName(group.icon, 'bi-folder')" />
           <span class="ms-2">{{ group.name }}</span>
         </bs-accordion-tab-header>
         @for (unit of group.programUnits; track unit.id) {
@@ -21,7 +21,7 @@
            routerLinkActive="active"
            (click)="onMenuItemClick()"
            class="d-block px-3 py-2 text-light text-decoration-none nav-link">
-          <i class="bi" [ngClass]="unit.icon || 'bi-file'"></i>
+          <app-icon [name]="getIconName(unit.icon, 'bi-file')" />
           <span class="ms-2">{{ unit.name }}</span>
         </a>
         }
