--- a/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
@@ -12,8 +12,8 @@
         <div [md]="8">
           @if (attr.dataType === 'boolean') {
             <bs-toggle-button
-              [(isToggled)]="formData[attr.name]"
-              (isToggledChange)="onFieldChange()">
+              [(ngModel)]="formData[attr.name]"
+              (ngModelChange)="onFieldChange()">
             </bs-toggle-button>
           } @else if (attr.dataType === 'Reference') {
             <bs-input-group>
@@ -104,7 +104,7 @@
             <div [md]="8">
               @if (detailAttr.dataType === 'boolean') {
                 <bs-toggle-button
-                  [(isToggled)]="asDetailFormData[detailAttr.name]">
+                  [(ngModel)]="asDetailFormData[detailAttr.name]">
                 </bs-toggle-button>
               } @else {
                 <input
