--- a/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
+++ b/Demo/DemoApp/ClientApp/src/app/components/po-form/po-form.component.html
@@ -41,7 +41,7 @@
                 <option [ngValue]="null">-- Select --</option>
                 @for (option of getLookupOptions(attr); track option.key) {
                   <option [ngValue]="option.key">
-                    {{ option.translations['en'] || option.key }}
+                    {{ option.translations[getCurrentLanguage()] || option.translations['en'] || option.key }}
                   </option>
                 }
               </bs-select>
@@ -266,7 +266,7 @@
               [class.table-primary]="formData[editingLookupAttr?.name ?? ''] === item.key"
               (click)="selectLookupItem(item)"
               style="cursor: pointer;">
-              <td>{{ item.translations['en'] || item.key }}</td>
+              <td>{{ item.translations[getCurrentLanguage()] || item.translations['en'] || item.key }}</td>
             </tr>
           } @empty {
             <tr>
