--- a/Demo/DemoApp/ClientApp/src/app/pages/query-list/query-list.component.scss
+++ b/Demo/DemoApp/ClientApp/src/app/pages/query-list/query-list.component.scss
@@ -1,3 +1,8 @@
 tr:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
+
+td input[type="checkbox"]:disabled {
+  opacity: 1;
+  pointer-events: none;
+}
