--- a/Demo/HR/HR/ClientApp/src/app/components/po-form/po-form.component.html
+++ b/Demo/HR/HR/ClientApp/src/app/components/po-form/po-form.component.html
@@ -123,9 +123,9 @@
     </div>
 
     @if (editingAsDetailAttr) {
-      <bs-grid bsModalBody class="mt-3">
-        @for (detailAttr of getAsDetailAttributes(editingAsDetailAttr); track detailAttr.id) {
-          <div bsRow class="mb-3">
+      <bs-grid bsModalBody class="d-block">
+        @for (detailAttr of getAsDetailAttributes(editingAsDetailAttr); track detailAttr.id; let isLast = $last) {
+          <div bsRow [class.mb-3]="!isLast">
             <label [md]="4" bsColFormLabel [for]="'detail_' + detailAttr.name">
               {{ detailAttr.label || detailAttr.name }}
               @if (detailAttr.isRequired) {
